<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppSend</string>
    <string name="bytes">%d B</string>
    <string name="kibibytes">%.1f KB</string>
    <string name="mibibytes">%.1f MB</string>
    <string name="gigibytes">%.1f GB</string>
    <string name="please_wait">Please, wait…</string>
    <string name="app_extract_success">Successfully exported to \n&lt;b>%s&lt;/b>\nShare with it now?</string>
    <string name="app_extract_failed">Exporting failed :(</string>
    <string name="refresh">Refresh</string>
    <string name="tomclaw_software">TomClaw Software</string>
    <string name="app_version">Version %1$s (%2$s)</string>
    <string name="info">Info</string>
    <string name="rate_app">Rate app</string>
    <string name="all_apps">All apps</string>
    <string name="pref_base_title">Base settings</string>
    <string name="pref_summary_show_system">Show system applications in list</string>
    <string name="pref_title_show_system">System apps</string>
    <string name="got_it">Got it!</string>
    <string name="system_apps_warning_title">Warning!</string>
    <string name="system_apps_warning_message">System apps are not usual apps and there is no warranty of its
        successful export!
    </string>
    <string name="settings">Settings</string>
    <string name="success">Success!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_to">Share with</string>
    <string name="pref_title_sort_order">Sort order</string>
    <string name="sort_order_ascending">A - Z</string>
    <string name="sort_order_descending">Z - A</string>
    <string name="sort_order_app_size">By app size</string>
    <string name="sort_order_install_time">By install time</string>
    <string name="sort_order_update_time">By update time</string>
    <string name="pref_summary_sort_order">Apps list sort order variants</string>
    <string name="extract_apk">Extract APK into Downloads</string>
    <string name="share_apk">Share APK via apps</string>
    <string name="upload_apk">Upload APK and get link</string>
    <string name="bluetooth_apk">Send via Bluetooth</string>
    <string name="find_on_gp">Find in Google Play</string>
    <string name="remove_app">Remove application</string>
    <string name="send_url_to">Share URL with</string>
    <string name="uploading_error">Error while uploading application file. Try again later, please.</string>
    <string name="uploading_message">Uploading application file…</string>
    <string name="obtaining_link_message">Obtaining file link…</string>
    <string name="uploading_successful">Application file uploading successful! What would you like to do with URL link to this application?</string>
    <string name="share_url">Share</string>
    <string name="copy_url">Copy</string>
    <string name="pref_title_clear_cache">Clear cache</string>
    <string name="pref_summary_clear_cache">Remove all previously extracted APK files in Downloads directory</string>
    <string name="cache_cleared_successfully">Cache cleared successfully</string>
    <string name="cache_clearing_failed">Cache clearing failed</string>
    <string name="size_limit_exceeded">Size limit of %s exceeded</string>
</resources>
