<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/refresh"
          android:icon="@drawable/ic_action_refresh"
          android:showAsAction="ifRoom|withText"
          app:showAsAction="ifRoom|withText"
          android:title="@string/refresh"/>
    <item android:id="@+id/settings"
          android:icon="@drawable/ic_action_settings"
          android:showAsAction="never"
          app:showAsAction="never"
          android:title="@string/settings"/>
    <item android:id="@+id/info"
          android:icon="@drawable/ic_action_about"
          android:showAsAction="never"
          app:showAsAction="never"
          android:title="@string/info"/>
</menu>